auto expand infra research threads

--- a/assets/package.json
+++ b/assets/package.json
@@ -102,6 +102,7 @@
     "react-virtualized-auto-sizer": "1.0.26",
     "react-window": "1.8.11",
     "react-window-reversed": "1.4.1",
+    "remark-gfm": "4.0.0",
     "semver": "7.5.4",
     "streamsaver": "2.0.6",
     "styled-components": "6.1.15",
