--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -6313,6 +6313,16 @@
   publisher: eks
 - name: kubecost_kubecost
   versions:
+  - version: v3.0.6-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+    - '1.27'
   - version: v2.7.1-eksbuild.1
     compatibilities:
     - '1.32'
