--- a/charts/controller/crds/deployments.plural.sh_upgradeplancallouts.yaml
+++ b/charts/controller/crds/deployments.plural.sh_upgradeplancallouts.yaml
@@ -12,9 +12,14 @@ spec:
     listKind: UpgradePlanCalloutList
     plural: upgradeplancallouts
     singular: upgradeplancallout
-  scope: Namespaced
+  scope: Cluster
   versions:
-  - name: v1alpha1
+  - additionalPrinterColumns:
+    - description: UpgradePlanCallout ID
+      jsonPath: .status.id
+      name: Id
+      type: string
+    name: v1alpha1
     schema:
       openAPIV3Schema:
         description: UpgradePlanCallout is the Schema for the upgradeplancallouts
