--- a/go/controller/config/rbac/role.yaml
+++ b/go/controller/config/rbac/role.yaml
@@ -35,6 +35,7 @@ rules:
   - clusters
   - clustersyncs
   - complianceReportGenerators
+  - customcompatibilitymatrices
   - customstackruns
   - deploymentsettings
   - federatedcredentials
@@ -67,6 +68,7 @@ rules:
   - servicecontexts
   - servicedeployments
   - stackdefinitions
+  - upgradeplancallouts
   verbs:
   - create
   - delete
@@ -86,6 +88,7 @@ rules:
   - clusters/finalizers
   - clustersyncs/finalizers
   - complianceReportGenerators/finalizers
+  - customcompatibilitymatrices/finalizers
   - customstackruns/finalizers
   - deploymentsettings/finalizers
   - federatedcredentials/finalizers
@@ -118,6 +121,7 @@ rules:
   - servicecontexts/finalizers
   - servicedeployments/finalizers
   - stackdefinitions/finalizers
+  - upgradeplancallouts/finalizers
   verbs:
   - update
 - apiGroups:
@@ -131,6 +135,7 @@ rules:
   - clusters/status
   - clustersyncs/status
   - complianceReportGenerators/status
+  - customcompatibilitymatrices/status
   - customstackruns/status
   - deploymentsettings/status
   - federatedcredentials/status
@@ -163,6 +168,7 @@ rules:
   - servicecontexts/status
   - servicedeployments/status
   - stackdefinitions/status
+  - upgradeplancallouts/status
   verbs:
   - get
   - patch
