add ignore hooks to helm minimal config

--- a/charts/controller/crds/deployments.plural.sh_clusters.yaml
+++ b/charts/controller/crds/deployments.plural.sh_clusters.yaml
@@ -195,6 +195,10 @@ spec:
                     type: object
                 type: object
                 x-kubernetes-map-type: atomic
+              disableAI:
+                description: DisableAI indicates whether to disable ai insights for
+                  this cluster.
+                type: boolean
               handle:
                 description: |-
                   Handle is a short, unique human-readable name used to identify this cluster.
