--- a/static/addons/eks.yaml
+++ b/static/addons/eks.yaml
@@ -3908,6 +3908,14 @@
     - '1.31'
     - '1.30'
     - '1.29'
+  - version: v1.18.4-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.18.3-eksbuild.1
     compatibilities:
     - '1.33'
@@ -4221,6 +4229,19 @@
     - '1.22'
     - '1.21'
   publisher: dynatrace
+- name: eg-innovations_eg-universal-agent-operator
+  versions:
+  - version: v0.0.54-eksbuild.1
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
+    - '1.28'
+    - '1.27'
+  publisher: eG Innovations
 - name: eks-node-monitoring-agent
   versions:
   - version: v1.4.3-eksbuild.2
@@ -5158,6 +5179,10 @@
   - version: v1.34.0-eksbuild.2
     compatibilities:
     - '1.34'
+  - version: v1.33.7-eksbuild.2
+    compatibilities:
+    - '1.34'
+    - '1.33'
   - version: v1.33.5-eksbuild.2
     compatibilities:
     - '1.34'
@@ -5178,6 +5203,11 @@
     compatibilities:
     - '1.34'
     - '1.33'
+  - version: v1.32.11-eksbuild.2
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
   - version: v1.32.9-eksbuild.2
     compatibilities:
     - '1.34'
@@ -5223,6 +5253,12 @@
     - '1.34'
     - '1.33'
     - '1.32'
+  - version: v1.31.14-eksbuild.2
+    compatibilities:
+    - '1.34'
+    - '1.33'
+    - '1.32'
+    - '1.31'
   - version: v1.31.13-eksbuild.2
     compatibilities:
     - '1.34'
@@ -5301,6 +5337,12 @@
     - '1.33'
     - '1.32'
     - '1.31'
+  - version: v1.30.14-eksbuild.20
+    compatibilities:
+    - '1.33'
+    - '1.32'
+    - '1.31'
+    - '1.30'
   - version: v1.30.14-eksbuild.18
     compatibilities:
     - '1.33'
@@ -5397,6 +5439,12 @@
     - '1.32'
     - '1.31'
     - '1.30'
+  - version: v1.29.15-eksbuild.28
+    compatibilities:
+    - '1.32'
+    - '1.31'
+    - '1.30'
+    - '1.29'
   - version: v1.29.15-eksbuild.26
     compatibilities:
     - '1.32'
